--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@
  </body>
 </html>
 
+The <b>Beatles</b> were a rock band from England. However, they produced many <u>different</u> genres of music. 
+
