--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
  <body>
-  <h1>My First Heading</h1>
+  <h1>The Beatles :)</h1>
 	<p>My first paragraph.</p>
-
-
-
 </html>
 
 The <b>Beatles</b> were a rock band from England. However, they produced many <u>different</u> genres of music. 
