--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
  <body>
   <h1>The Beatles :)</h1>
 	<p>My first paragraph.</p>
-</html>
+
 
 The <b>Beatles</b> were a rock band from England. However, they produced many <u>different</u> genres of music. 
 
 <p><a href="url">https://www.youtube.com/watch?v=FZSHsJjsh-Y</a></p>
+	 <p><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/42/Beatles_-_Abbey_Road.jpg/220px-Beatles_-_Abbey_Road.jpg" alt="text" style="width:200px;height:200px;"></p>
+
 </body>
+</html>
