--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 The <b>Beatles</b> were a rock band from England. However, they produced many <u>different</u> genres of music. 
 
-<p><a href="url">https://www.youtube.com/watch?v=FZSHsJjsh-Y</a></p>
+
+	<p><a href="https://open.spotify.com/artist/3WrFJ7ztbogyGnTHbHJFl2?si=DfB2Y9ucRs6x-kKB6J3qNw">Click for Beatles Music on Spotify</a></p>
+
 	 <p><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/42/Beatles_-_Abbey_Road.jpg/220px-Beatles_-_Abbey_Road.jpg" alt="text" style="width:200px;height:200px;"></p>
 
 </body>
