--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ The <b>Beatles</b> were a rock band from England. However, they produced many <u
 
 	<body bgcolor="99a894">
 
+<button>This is a button buttons are fun.</button>
 
+		
 	</body>
 </html>
