--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ The <b>Beatles</b> were a rock band from England. However, they produced many <u
 
 	<p><a href="https://open.spotify.com/artist/3WrFJ7ztbogyGnTHbHJFl2?si=DfB2Y9ucRs6x-kKB6J3qNw">Click for Beatles Music on Spotify</a></p>
 
-	 <p><img src="https://m.media-amazon.com/images/I/41DjG69tLrL._SY450_.jpg" alt="text" style="width:200px;height:200px;"></p>
+	 <p><img src="https://en-academic.com/pictures/enwiki/87/Withthebeatlescover.jpg" alt="text" style="width:200px;height:200px;"></p>
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/FZSHsJjsh-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
 	<body bgcolor="99a894">
 
 <button>This is a button buttons are fun.</button>
 		
-<h2> Some Well Knowmn Beatles Songs <h2>		
+<h2> Some Well Known Beatles Songs <h2>		
 		<ul>
   <li>Here Comes the Sun</li>
   <li>Let it Be</li>
